fixed scrollbar

--- a/css/main.scss
+++ b/css/main.scss
@@ -495,7 +495,7 @@ main {
       gap: 5px;
       border-bottom: 1px solid #2b2b2b;
       padding: 8px 0;
-      height: 124px;
+      height: 170px;
       overflow-y: auto;
       &::-webkit-scrollbar {
         display: none;
@@ -559,11 +559,12 @@ main {
       display: flex;
       flex-direction: column;
       gap: 2px;
-      height: 195px;
+      height: 340px;
+      overflow-y: auto;
+
       &::-webkit-scrollbar {
         display: none;
       }
-      overflow-y: auto;
     }
     &-box {
       border-bottom: 1px solid #2b2b2b;
